--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -18,10 +18,29 @@ h3 {
     font-style: italic;
   }
 
-h1 {
-    text-decoration: underline;
-}  
-
 #manage {
     margin-top: 50px;
+}
+
+#manage h1 {
+  color: darkred;
+  text-decoration: underline;
+}
+
+.container2 h1 {
+  color: darkred;
+  text-decoration: underline;
+}
+
+#instructions #header h1 {
+  font-size: 38px;
+  font-weight: 600;
+}
+
+#instructions {
+  background-color: darkred;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding: 2px;
 }
